--- a/packages/app/distribute_options.yaml
+++ b/packages/app/distribute_options.yaml
@@ -1,6 +1,6 @@
-output: build/dist/
+output: ../../dist/
 releases:
-  - name: release
+  - name: release-linux
     jobs:
       - name: release-dev-linux-deb
         package:
@@ -20,11 +20,16 @@ releases:
           target: appimage
           build_args:
             enable-experiment: records
-      - name: release-dev-windows-msix
+  - name: release-windows
+    jobs:
+      - name: release-dev-windows-exe
         package:
           platform: windows
-          target: msix
-# fastforge release --name=release --platform linux --targets deb,rpm,appimage
+          target: exe
+          build_args:
+            enable-experiment: records
+# fastforge release --name=release --platform=linux --targets=deb,rpm,appimage
+
 # fastforge release --name=release --platform windows --targets msix
 
 # fastforge release --name=release --jobs=release-dev-linux-deb
