--- a/packages/app/pubspec.yaml
+++ b/packages/app/pubspec.yaml
@@ -4,7 +4,7 @@ description: Keychat is a chat app, built on Bitcoin Ecash , Nostr Protocol and 
 # pub.dev using `flutter pub publish`. This is preferred for private packages.
 publish_to: "none" # Remove this line if you wish to publish to pub.dev
 
-version: 1.32.6+6384
+version: 1.32.9+6387
 
 environment:
   sdk: ">=3.5.0 <4.0.0"
@@ -80,8 +80,8 @@ dependencies:
   freezed_annotation: ^3.0.0
   barcode_scan2: ^4.5.1
   intl: ^0.20.2
-  firebase_core: ^3.13.0
-  firebase_messaging: ^15.2.5
+  firebase_core: ^3.13.1
+  firebase_messaging: ^15.2.6
   async_queue: ^2.0.2
   url_launcher: ^6.3.1
   flutter_inappwebview: ^6.2.0-beta.2
@@ -117,6 +117,8 @@ dev_dependencies:
   lints: ^5.1.1
   flutter_lints: ^5.0.0
   dmg: ^0.1.3
+  args: ^2.7.0
+  crypto: ^3.0.6
 
 dependency_overrides:
   dart_style: ^2.2.3
@@ -139,3 +141,19 @@ flutter_native_splash:
   image: assets/images/logo.png
   color_dark: "#121212"
   image_dark: assets/images/logo.png
+
+module:
+  androidX: true
+
+msix_config:
+  display_name: Keychat
+  publisher: CN=Keychat, O=Keychat, L=Singapore, S=Singapore, C=SG
+  publisher_display_name: KEYME PTE. LTD.
+  identity_name: Keychat
+  description: Keychat is the super app for Bitcoiners. Autonomous IDs, Bitcoin ecash wallet, secure chat, and rich mini apps — all in Keychat.
+  logo: assets/images/logo.png
+  capabilities:
+    - internetClient
+    - privateNetworkClientServer
+    - documentsLibrary
+    - webcam
