--- a/packages/app/pubspec.yaml
+++ b/packages/app/pubspec.yaml
@@ -42,7 +42,7 @@ dependencies:
     hosted: https://pub.isar-community.dev/
   share_plus: ^10.1.2
   flutter_linkify: ^6.0.0
-  permission_handler: ^11.3.1
+  permission_handler: ^12.0.0+1
   qr_flutter: ^4.1.0
   settings_ui: ^2.0.2
   search_page: ^2.3.0
@@ -80,8 +80,8 @@ dependencies:
   freezed_annotation: ^3.0.0
   barcode_scan2: ^4.5.1
   intl: ^0.20.2
-  firebase_core: ^3.13.1
-  firebase_messaging: ^15.2.6
+  firebase_core: ^3.14.0
+  firebase_messaging: ^15.2.7
   async_queue: ^2.0.2
   url_launcher: ^6.3.1
   flutter_inappwebview: ^6.2.0-beta.2
@@ -117,8 +117,6 @@ dev_dependencies:
   lints: ^5.1.1
   flutter_lints: ^5.0.0
   dmg: ^0.1.3
-  args: ^2.7.0
-  crypto: ^3.0.6
 
 dependency_overrides:
   dart_style: ^2.2.3
