add setting `autoSignEvent`

--- a/packages/app/macos/Runner/Info.plist
+++ b/packages/app/macos/Runner/Info.plist
@@ -43,5 +43,10 @@
     <true/>
     <key>ITSAppUsesNonExemptEncryption</key>
     <false/>
+    <key>UIBackgroundModes</key>
+    <array>
+      <string>fetch</string>
+      <string>remote-notification</string>
+    </array>
   </dict>
 </plist>
