--- a/packages/app/pubspec.yaml
+++ b/packages/app/pubspec.yaml
@@ -4,7 +4,7 @@ description: Keychat is a chat app, built on Bitcoin Ecash , Nostr Protocol and 
 # pub.dev using `flutter pub publish`. This is preferred for private packages.
 publish_to: "none" # Remove this line if you wish to publish to pub.dev
 
-version: 1.32.10+6388
+version: 1.33.1+6391
 
 environment:
   sdk: ">=3.5.0 <4.0.0"
@@ -31,7 +31,6 @@ dependencies:
   badges: ^3.1.2
   equatable: ^2.0.6
   json_annotation: ^4.9.0
-  aws: 1.0.0
   keychat_rust_ffi_plugin: 1.0.0
   keychat_ecash: 1.0.0
   isar:
@@ -98,7 +97,7 @@ dependencies:
   path: ^1.9.0
   sidebarx: ^0.17.1
   background_downloader: ^9.2.2
-  # super_clipboard: ^0.8.24
+  super_clipboard: ^0.9.1
 
 dev_dependencies:
   flutter_test:
