--- a/packages/app/pubspec.yaml
+++ b/packages/app/pubspec.yaml
@@ -98,6 +98,8 @@ dependencies:
   sidebarx: ^0.17.1
   background_downloader: ^9.2.2
   super_clipboard: ^0.9.1
+  responsive_grid_list: ^1.4.0
+  mime: ^2.0.0
 
 dev_dependencies:
   flutter_test:
