--- a/packages/app/macos/Runner/Info.plist
+++ b/packages/app/macos/Runner/Info.plist
@@ -22,6 +22,8 @@
     <string>$(FLUTTER_BUILD_NUMBER)</string>
     <key>FirebaseMessagingAutoInitEnabled</key>
     <false/>
+    <key>FirebaseAppDelegateProxyEnabled</key>
+    <false/>
     <key>LSApplicationCategoryType</key>
     <string>public.app-category.social-networking</string>
     <key>LSApplicationQueriesSchemes</key>
