--- a/packages/app/pubspec.yaml
+++ b/packages/app/pubspec.yaml
@@ -4,7 +4,7 @@ description: Keychat is a chat app, built on Bitcoin Ecash , Nostr Protocol and 
 # pub.dev using `flutter pub publish`. This is preferred for private packages.
 publish_to: "none" # Remove this line if you wish to publish to pub.dev
 
-version: 1.33.1+6392
+version: 1.33.2+6397
 
 environment:
   sdk: ">=3.5.0 <4.0.0"
@@ -98,6 +98,8 @@ dependencies:
   sidebarx: ^0.17.1
   background_downloader: ^9.2.2
   super_clipboard: ^0.9.1
+  responsive_grid_list: ^1.4.0
+  mime: ^2.0.0
 
 dev_dependencies:
   flutter_test:
