--- a/packages/keychat_ecash/pubspec.yaml
+++ b/packages/keychat_ecash/pubspec.yaml
@@ -1,7 +1,6 @@
 name: keychat_ecash
 description: A sample command-line application.
 version: 1.0.0
-# repository: https://github.com/my_org/my_repo
 
 environment:
   sdk: ">=3.5.0 <4.0.0"
@@ -15,6 +14,16 @@ dependencies:
   timer_builder: ^2.0.0
   app: ^1.32.0
   keychat_rust_ffi_plugin: 1.0.0
+  flutter_easyloading: ^3.0.5
+  easy_debounce: ^2.0.3
+  get: ^4.7.2
+  pull_to_refresh_flutter3: ^2.0.2
+  settings_ui: ^2.0.2
+  carousel_slider: ^5.1.1
+  intl: ^0.20.2
+  dio: ^5.8.0+1
+  url_launcher: ^6.3.1
+  flutter_svg: ^2.2.0
 
 dev_dependencies:
   test: ^1.21.0
