--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -31,6 +31,10 @@ env:
   # .ref_name == new-login
   IS_STABLE: ${{ !contains(github.ref, '-') }}
   FLUTTER_VERSION: "3.32.5"
+  BUILD_LINUX: true
+  BUILD_ANDROID: false
+  BUILD_WINDOWS: false
+  BUILD_UPLOAD: false
 
 jobs:
   get-version:
@@ -59,7 +63,7 @@ jobs:
           echo "version_short=$VERSION_SHORT" >> $GITHUB_OUTPUT
           echo "build_number=$BUILD_NUMBER" >> $GITHUB_OUTPUT
   build-linux:
-    # if: false # Temporarily disabled for testing
+    if: ${{ env.BUILD_LINUX }}
     runs-on: ubuntu-22.04
     needs: get-version
     steps:
@@ -74,7 +78,6 @@ jobs:
           sudo apt-get update -y && sudo apt-get upgrade -y
           sudo apt-get install -y curl libcurl4-openssl-dev git unzip xz-utils zip libglu1-mesa
           sudo apt-get install -y clang cmake ninja-build pkg-config libgtk-3-dev liblzma-dev libstdc++-12-dev
-          cargo install flutter_rust_bridge_codegen@2.10.0
           rustup target add x86_64-unknown-linux-gnu aarch64-unknown-linux-gnu
       - name: Setup Flutter
         uses: subosito/flutter-action@v2
@@ -122,7 +125,7 @@ jobs:
           cd ./packages/app/ && rm -f .env
 
   build-windows:
-    # if: false # Temporarily disabled for testing
+    if: ${{ env.BUILD_WINDOWS }}
     runs-on: windows-latest
     needs: get-version
     steps:
@@ -166,7 +169,7 @@ jobs:
           overwrite: true
 
   build-android:
-    # if: false # Temporarily disabled for testing
+    if: ${{ env.BUILD_ANDROID }}
     runs-on: ubuntu-22.04
     needs: get-version
     steps:
@@ -408,7 +411,7 @@ jobs:
           rm -f .env
           rm -f macos/Runner/GoogleService-Info.plist
   upload:
-    # if: false # Temporarily disabled for testing
+    if: ${{ env.BUILD_UPLOAD }}
     permissions: write-all
     needs: [get-version, build-windows, build-linux, build-android]
     runs-on: ubuntu-latest
