--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -31,10 +31,6 @@ env:
   # .ref_name == new-login
   IS_STABLE: ${{ !contains(github.ref, '-') }}
   FLUTTER_VERSION: "3.32.5"
-  BUILD_LINUX: true
-  BUILD_ANDROID: false
-  BUILD_WINDOWS: false
-  BUILD_UPLOAD: false
 
 jobs:
   get-version:
@@ -63,7 +59,7 @@ jobs:
           echo "version_short=$VERSION_SHORT" >> $GITHUB_OUTPUT
           echo "build_number=$BUILD_NUMBER" >> $GITHUB_OUTPUT
   build-linux:
-    if: ${{ env.BUILD_LINUX == 'true' }}
+    # if: false
     runs-on: ubuntu-22.04
     needs: get-version
     steps:
@@ -125,7 +121,7 @@ jobs:
           cd ./packages/app/ && rm -f .env
 
   build-windows:
-    if: ${{ env.BUILD_WINDOWS == 'true' }}
+    if: false # Temporarily disabled for testing
     runs-on: windows-latest
     needs: get-version
     steps:
@@ -169,7 +165,7 @@ jobs:
           overwrite: true
 
   build-android:
-    if: ${{ env.BUILD_ANDROID == 'true' }}
+    if: false # Temporarily disabled for testing
     runs-on: ubuntu-22.04
     needs: get-version
     steps:
@@ -411,7 +407,7 @@ jobs:
           rm -f .env
           rm -f macos/Runner/GoogleService-Info.plist
   upload:
-    if: ${{ env.BUILD_UPLOAD == 'true' }}
+    if: false # Temporarily disabled for testing
     permissions: write-all
     needs: [get-version, build-windows, build-linux, build-android]
     runs-on: ubuntu-latest
