--- a/packages/app/ios/Runner/Info.plist
+++ b/packages/app/ios/Runner/Info.plist
@@ -76,5 +76,7 @@
       <key>NSAllowsLocalNetworking</key>
       <true/>
     </dict>
+    <key>FlutterDeepLinkingEnabled</key>
+    <false/>
   </dict>
 </plist>
