--- a/packages/app/ios/Runner/Info.plist
+++ b/packages/app/ios/Runner/Info.plist
@@ -36,6 +36,42 @@
           <string>keychat</string>
         </array>
       </dict>
+      <dict>
+        <key>CFBundleTypeRole</key>
+        <string>Viewer</string>
+        <key>CFBundleURLIconFile</key>
+        <string>https://www.keychat.io/assets/img/logo.png</string>
+        <key>CFBundleURLName</key>
+        <string>com.keychat.test</string>
+        <key>CFBundleURLSchemes</key>
+        <array>
+          <string>lightning</string>
+        </array>
+      </dict>
+      <dict>
+        <key>CFBundleTypeRole</key>
+        <string>Viewer</string>
+        <key>CFBundleURLIconFile</key>
+        <string>https://www.keychat.io/assets/img/logo.png</string>
+        <key>CFBundleURLName</key>
+        <string>com.keychat.test</string>
+        <key>CFBundleURLSchemes</key>
+        <array>
+          <string>nostr</string>
+        </array>
+      </dict>
+      <dict>
+        <key>CFBundleTypeRole</key>
+        <string>Viewer</string>
+        <key>CFBundleURLIconFile</key>
+        <string>https://www.keychat.io/assets/img/logo.png</string>
+        <key>CFBundleURLName</key>
+        <string>com.keychat.test</string>
+        <key>CFBundleURLSchemes</key>
+        <array>
+          <string>lnurlp</string>
+        </array>
+      </dict>
     </array>
     <key>CFBundleVersion</key>
     <string>$(FLUTTER_BUILD_NUMBER)</string>
@@ -45,6 +81,11 @@
     <false/>
     <key>ITSAppUsesNonExemptEncryption</key>
     <false/>
+    <key>LSApplicationQueriesSchemes</key>
+    <array>
+      <string>lightning</string>
+      <string>lnurlp</string>
+    </array>
     <key>LSRequiresIPhoneOS</key>
     <true/>
     <key>NSAppTransportSecurity</key>
@@ -88,11 +129,5 @@
     <false/>
     <key>io.flutter.embedded_views_preview</key>
     <true/>
-    <key>LSApplicationQueriesSchemes</key>
-    <array>
-      <string>nostr</string>
-      <string>lightning</string>
-      <string>lnurlp</string>
-    </array>
   </dict>
 </plist>
