--- a/packages/app/ios/Runner/Runner.entitlements
+++ b/packages/app/ios/Runner/Runner.entitlements
@@ -9,6 +9,10 @@
 		<string>applinks:keychat.io</string>
 		<string>applinks:www.keychat.io</string>
 	</array>
+	<key>com.apple.security.application-groups</key>
+	<array>
+		<string>group.com.keychat.ShareExtension</string>
+	</array>
 	<key>keychain-access-groups</key>
 	<array>
 		<string>$(AppIdentifierPrefix)shared</string>
