--- a/packages/app/pubspec.yaml
+++ b/packages/app/pubspec.yaml
@@ -4,7 +4,7 @@ description: Keychat is a chat app, built on Bitcoin Ecash , Nostr Protocol and 
 # pub.dev using `flutter pub publish`. This is preferred for private packages.
 publish_to: "none" # Remove this line if you wish to publish to pub.dev
 
-version: 1.33.9+6409
+version: 1.34.1+6410
 
 environment:
   sdk: ">=3.5.0 <4.0.0"
@@ -98,6 +98,9 @@ dependencies:
   responsive_grid_list: ^1.4.0
   mime: ^2.0.0
   app_links: ^6.4.0
+  receive_sharing_intent:
+    git:
+      url: https://github.com/KasemJaffer/receive_sharing_intent
 
 dev_dependencies:
   flutter_test:
