--- a/packages/app/pubspec.yaml
+++ b/packages/app/pubspec.yaml
@@ -4,7 +4,7 @@ description: Keychat is a chat app, built on Bitcoin Ecash , Nostr Protocol and 
 # pub.dev using `flutter pub publish`. This is preferred for private packages.
 publish_to: "none" # Remove this line if you wish to publish to pub.dev
 
-version: 1.35.2+6420
+version: 1.35.3+6421
 
 environment:
   sdk: ">=3.5.0 <4.0.0"
@@ -47,13 +47,13 @@ dependencies:
   search_page: ^2.3.0
   flutter_native_splash: ^2.4.4
   package_info_plus: ^8.3.0
-  flutter_spinkit: ^5.2.0 # loading
-  dio: ^5.7.0
+  flutter_spinkit: ^5.2.2 # loading
+  dio: ^5.9.0
   photo_view: ^0.15.0
   image_picker: ^1.0.7 # select image
   any_link_preview: ^3.0.2 # show link preview in chat content
   flutter_dotenv: ^5.2.1
-  logger: ^2.5.0
+  logger: ^2.6.1
   cached_network_image: ^3.4.1
   queue: ^3.1.0+2
   mutex: ^3.0.1
@@ -66,7 +66,7 @@ dependencies:
   video_compress: ^3.1.4
   markdown_widget: ^2.3.2+8
   scroll_to_index: ^3.0.1
-  connectivity_plus: ^6.1.0
+  connectivity_plus: ^6.1.5
   open_filex: ^4.7.0
   timer_builder: ^2.0.0
   linkify: ^5.0.0
@@ -79,10 +79,10 @@ dependencies:
   firebase_core: ^3.15.1
   firebase_messaging: ^15.2.9
   async_queue: ^2.0.2
-  url_launcher: ^6.3.1
+  url_launcher: ^6.3.2
   flutter_inappwebview: ^6.2.0-beta.2
   encrypt: ^5.0.3
-  file_picker: ^10.0.0
+  file_picker: ^10.3.1
   image: ^4.5.2
   pub_semver: ^2.1.5
   flutter_new_badger: ^1.1.0
@@ -92,15 +92,16 @@ dependencies:
       url: https://github.com/keychat-io/amberflutter.git
   web_socket_client: ^0.2.0
   path: ^1.9.0
-  sidebarx: ^0.17.1
+  sidebarx: ^0.17.2
   background_downloader: ^9.2.2
   super_clipboard: ^0.9.1
   responsive_grid_list: ^1.4.0
   mime: ^2.0.0
-  app_links: ^6.4.0
+  app_links: ^6.4.1
   receive_sharing_intent:
     git:
       url: https://github.com/KasemJaffer/receive_sharing_intent
+  custom_refresh_indicator: ^4.0.1
 
 dev_dependencies:
   flutter_test:
