--- a/packages/app/pubspec.yaml
+++ b/packages/app/pubspec.yaml
@@ -33,12 +33,8 @@ dependencies:
   json_annotation: ^4.9.0
   keychat_rust_ffi_plugin: 1.0.0
   keychat_ecash: 1.0.0
-  isar:
-    version: 3.1.8
-    hosted: https://pub.isar-community.dev/
-  isar_flutter_libs: # contains Isar Core
-    version: 3.1.8
-    hosted: https://pub.isar-community.dev/
+  isar_community: 3.2.0-dev.2
+  isar_community_flutter_libs: 3.2.0-dev.2
   share_plus: ^10.1.2
   flutter_linkify: ^6.0.0
   permission_handler: ^12.0.0+1
@@ -111,9 +107,7 @@ dev_dependencies:
     sdk: flutter
   build_runner: ^2.4.15
   json_serializable: ^6.9.0
-  isar_generator:
-    version: 3.1.8
-    hosted: https://pub.isar-community.dev/
+  isar_community_generator: 3.2.0-dev.2
   freezed: ^3.0.0-0.0.dev
   flutter_launcher_icons: ^0.14.3
   analyzer: ^6.11.0
@@ -121,9 +115,6 @@ dev_dependencies:
   lints: ^5.1.1
   flutter_lints: ^5.0.0
   dmg: ^0.1.3
-
-dependency_overrides:
-  dart_style: ^2.2.3
 
 flutter:
   # The following line ensures that the Material Icons font is
