--- a/packages/app/pubspec.yaml
+++ b/packages/app/pubspec.yaml
@@ -4,7 +4,7 @@ description: Keychat is a chat app, built on Bitcoin Ecash , Nostr Protocol and 
 # pub.dev using `flutter pub publish`. This is preferred for private packages.
 publish_to: "none" # Remove this line if you wish to publish to pub.dev
 
-version: 1.34.3+6418
+version: 1.35.3+6422
 
 environment:
   sdk: ">=3.5.0 <4.0.0"
@@ -33,12 +33,8 @@ dependencies:
   json_annotation: ^4.9.0
   keychat_rust_ffi_plugin: 1.0.0
   keychat_ecash: 1.0.0
-  isar:
-    version: 3.1.8
-    hosted: https://pub.isar-community.dev/
-  isar_flutter_libs: # contains Isar Core
-    version: 3.1.8
-    hosted: https://pub.isar-community.dev/
+  isar_community: 3.2.0-dev.2
+  isar_community_flutter_libs: 3.2.0-dev.2
   share_plus: ^10.1.2
   flutter_linkify: ^6.0.0
   permission_handler: ^12.0.0+1
@@ -47,13 +43,13 @@ dependencies:
   search_page: ^2.3.0
   flutter_native_splash: ^2.4.4
   package_info_plus: ^8.3.0
-  flutter_spinkit: ^5.2.0 # loading
-  dio: ^5.7.0
+  flutter_spinkit: ^5.2.2 # loading
+  dio: ^5.9.0
   photo_view: ^0.15.0
-  image_picker: ^1.0.7 # select image
+  image_picker: ^1.2.0 # select image
   any_link_preview: ^3.0.2 # show link preview in chat content
   flutter_dotenv: ^5.2.1
-  logger: ^2.5.0
+  logger: ^2.6.1
   cached_network_image: ^3.4.1
   queue: ^3.1.0+2
   mutex: ^3.0.1
@@ -66,7 +62,7 @@ dependencies:
   video_compress: ^3.1.4
   markdown_widget: ^2.3.2+8
   scroll_to_index: ^3.0.1
-  connectivity_plus: ^6.1.0
+  connectivity_plus: ^6.1.5
   open_filex: ^4.7.0
   timer_builder: ^2.0.0
   linkify: ^5.0.0
@@ -79,10 +75,10 @@ dependencies:
   firebase_core: ^3.15.1
   firebase_messaging: ^15.2.9
   async_queue: ^2.0.2
-  url_launcher: ^6.3.1
+  url_launcher: ^6.3.2
   flutter_inappwebview: ^6.2.0-beta.2
   encrypt: ^5.0.3
-  file_picker: ^10.0.0
+  file_picker: ^10.3.1
   image: ^4.5.2
   pub_semver: ^2.1.5
   flutter_new_badger: ^1.1.0
@@ -92,15 +88,17 @@ dependencies:
       url: https://github.com/keychat-io/amberflutter.git
   web_socket_client: ^0.2.0
   path: ^1.9.0
-  sidebarx: ^0.17.1
+  sidebarx: ^0.17.2
   background_downloader: ^9.2.2
   super_clipboard: ^0.9.1
   responsive_grid_list: ^1.4.0
   mime: ^2.0.0
-  app_links: ^6.4.0
+  app_links: ^6.4.1
   receive_sharing_intent:
     git:
       url: https://github.com/KasemJaffer/receive_sharing_intent
+  custom_refresh_indicator: ^4.0.1
+  local_auth: ^2.3.0
 
 dev_dependencies:
   flutter_test:
@@ -109,9 +107,7 @@ dev_dependencies:
     sdk: flutter
   build_runner: ^2.4.15
   json_serializable: ^6.9.0
-  isar_generator:
-    version: 3.1.8
-    hosted: https://pub.isar-community.dev/
+  isar_community_generator: 3.2.0-dev.2
   freezed: ^3.0.0-0.0.dev
   flutter_launcher_icons: ^0.14.3
   analyzer: ^6.11.0
@@ -119,9 +115,6 @@ dev_dependencies:
   lints: ^5.1.1
   flutter_lints: ^5.0.0
   dmg: ^0.1.3
-
-dependency_overrides:
-  dart_style: ^2.2.3
 
 flutter:
   # The following line ensures that the Material Icons font is
