--- a/packages/app/pubspec.yaml
+++ b/packages/app/pubspec.yaml
@@ -4,7 +4,7 @@ description: Keychat is a chat app, built on Bitcoin Ecash , Nostr Protocol and 
 # pub.dev using `flutter pub publish`. This is preferred for private packages.
 publish_to: "none" # Remove this line if you wish to publish to pub.dev
 
-version: 1.35.4+6425
+version: 1.35.6+6427
 
 environment:
   sdk: ">=3.5.0 <4.0.0"
@@ -33,8 +33,8 @@ dependencies:
   json_annotation: ^4.9.0
   keychat_rust_ffi_plugin: 1.0.0
   keychat_ecash: 1.0.0
-  isar_community: 3.2.0-dev.2
-  isar_community_flutter_libs: 3.2.0-dev.2
+  isar_community: 3.3.0-dev.1
+  isar_community_flutter_libs: 3.3.0-dev.1
   share_plus: ^10.1.2
   flutter_linkify: ^6.0.0
   permission_handler: ^12.0.0+1
@@ -69,7 +69,7 @@ dependencies:
   flutter_svg: ^2.0.15
   flutter_secure_storage: ^10.0.0-beta.4
   avatar_plus: ^0.0.5
-  freezed_annotation: ^3.0.0
+  freezed_annotation: ^3.1.0
   intl: ^0.20.2
   firebase_core: ^3.15.1
   firebase_messaging: ^15.2.9
@@ -106,8 +106,9 @@ dev_dependencies:
   integration_test:
     sdk: flutter
   build_runner: ^2.4.15
+  build: ^2.3.0
   json_serializable: ^6.9.0
-  isar_community_generator: 3.2.0-dev.2
+  isar_community_generator: 3.3.0-dev.1
   freezed: ^3.0.0-0.0.dev
   flutter_launcher_icons: ^0.14.3
   test: ^1.21.0
